Status popin review, ability to reverse $POPIN with CTRL key
Major review and cleanup of the status popin. Added ability to
reverse the "display status popin" setting by holding the CTRL key.
If you felt displaying of the status popin was sometimes boring, that
new feature might worse a try.

If the "display status popin" settings is off, it won't be display
when the mouse is put over a row. However, if you press the CTRL key,
the popin will show.

Similarly, if the "display status popin" settings is turned on, you
can prevent it from being shown when hovering a row by pressing the
CTRL key.

--- a/style.css
+++ b/style.css
@@ -194,6 +194,17 @@ span.icon-bg-disa_notif, span.icon-bg-disa_notif:hover { background-color: #D5F4
  * Top panel
  */
 
+input#top-dummy-focus {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+    width: 0px;
+    height: 0px;
+    padding: 0px;
+    margin: 0px;
+}
+
 table#top {
     width: 100%;
     position: fixed;
