--- a/style.css
+++ b/style.css
@@ -632,6 +632,14 @@ input.readonly {
 .blue         { background-color: #ADD0FF; }
 .bluegreen    { background-color: #ADFFE4; }
 
+table#alert tr td.black,
+table#alert tr td.black * {
+    background-color: #333;
+    color: red;
+    font-weight: bold
+}
+
+/* base for rows */
 table#alert tr.orange    td    { border-color: #F0D4A2; }
 table#alert tr.red       td    { border-color: #EAA1A1; }
 table#alert tr.yellow    td    { border-color: #EAEA9A; }
@@ -639,38 +647,37 @@ table#alert tr.green     td    { border-color: #A9E89C; }
 table#alert tr.blue      td    { border-color: #A1C2F0; }
 table#alert tr.bluegreen td    { border-color: #9FE8C5; }
 
-table#alert tr.orange:hover td, 
+/* darken checkbox column */
+table#alert tr.orange:hover,
 table#alert tr.orange td.checkbox {
   background-color: #FFD07A;
   border-color: #EEC57A;
 }
 
-table#alert tr.red:hover td, 
+table#alert tr.red:hover,
 table#alert tr.red td.checkbox {
   background-color: #FF8F8F;
   border-color: #E89292;
 }
 
-table#alert tr.yellow:hover td, 
+table#alert tr.yellow:hover,
 table#alert tr.yellow td.checkbox {
   background-color: #FFF45C;
   border-color: #ECE258;
 }
 
-table#alert tr.green:hover td, 
+table#alert tr.green:hover,
 table#alert tr.green td.checkbox {
   background-color: #87F272;
   border-color: #86E173;
 }
 
-table#alert tr.blue:hover td, 
-table#alert tr.blue td.checkbox {
+table#alert tr.blue:hover {
   background-color: #87BAFF;
   border-color: #80ACE8;
 }
 
-table#alert tr.bluegreen:hover td, 
-table#alert tr.bluegreen td.checkbox {
+table#alert tr.bluegreen:hover {
   background-color: #76F0C8;
   border-color: #61E1B8;
 }
@@ -686,8 +693,8 @@ table#alert tr.selected td {
 }
 
 table#alert tr.showlog:hover {
-  background-color: #eeeeee;
-  border-color: #61E1B8;
+    background-color: #eeeeee;
+    border-color: #61E1B8;
 }
 
 /**
